<resources>
    <string name="app_name">Cville</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="CVille">CVille</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Languages -->
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="hebrew">עברית</string>
    <string name="ukranian">украї́нська</string>

    <!-- Roles -->
    <string name="helper">Helper</string>
    <string name="seeker">Seeker</string>
    <string name="next_page">></string>

    <!--Profile -->
    <string name="chat">Chat</string>
    <string name="next_profile">Next Match</string>

    <!--Home -->
    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="new_connection">New Connection</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dummy_profile">Dummy Profile</string>

    <!--No Match-->
    <string name="no_match_text">No match found. We will let you know blabla</string>
    <string name="no_match_button">Home</string>

    <!-- Forms-->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Registration -->
    <string name="need_help">I need help with</string>
    <string name="can_help">I can help with</string>




</resources>